HelloUltraviolet/Fixtures/RejectedSource/Expressions/ClosureAndPipelineExpressionsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the ClosureAndPipelineExpressionsDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-2539", "diag.16.ClosureAndPipelineExpressions")
